syntax = "proto3";

message UploadFile {
  string filename = 1;
  bytes content = 2;
}

message CreateCommandWithFileRequest {
  string user_id = 1;
  string command = 2;
  repeated UploadFile files = 3;
}

message CreateCommandWithFileResponse {
  string task_id = 1;
}

message CreateCommandWithInputRequest {
  string user_id = 1;
  string command = 2;
  map<string, string> input = 3;
}

message CreateCommandWithInputResponse {
  string task_id = 1;
}

service CommandService {
  rpc CreateCommandWithFile(CreateCommandWithFileRequest) returns (CreateCommandWithFileResponse);
  rpc CreateCommandWithInput(CreateCommandWithInputRequest) returns (CreateCommandWithInputResponse);
}
